[package]
name = "radixheap"
version = "0.1.4"
authors = ["Daniel Haase"]
edition = "2018"
description = "Radix heap data structure library"
readme = "README.md"
repository = "https://github.com/mcrbt/radixheap"
license = "LGPL-3.0"
license-file = "LICENSE"

[lib]
name = "radixheap"
path = "src/lib.rs"
test = true
doc = false
bench = false
plugin = false
edition = "2018"
crate-type = ["lib"]

[dependencies]

[dev-dependencies]
rand = "0.7"
